# shockboard

./: .gitignore  LICENSE  README.md  layout_cherry.dxf  pyproject.toml
cases/fairyboard_v1/: board_outline.slvs  case.py  sample_plate.3mf  sample_plate.scad  sample_plate.stl  sample_plate_cutouts.dxf  sample_plate_outline.dxf  testing_plate_mx_left.3mf  testing_plate_mx_right.3mf
cases/shockboard_v1/: assembly.scad  case_hipro_mx_bottom.scad  case_hipro_mx_bottom.stl  case_hipro_mx_bottom_left.3mf  case_hipro_mx_bottom_left_0.4n_0.2mm_PLA_MINI_3h56m.bgcode  case_hipro_mx_bottom_left_0.4n_0.2mm_PLA_MINI_3h56m.gcode  case_hipro_mx_bottom_right.3mf  case_hipro_mx_bottom_right_0.4n_0.2mm_PLA_MINI_3h55m.bgcode  case_hipro_mx_bottom_right_0.4n_0.2mm_PLA_MINI_3h55m.gcode  case_hipro_mx_top.scad  case_hipro_mx_top.stl  case_hipro_mx_top_left.3mf  case_hipro_mx_top_left_0.4n_0.2mm_PLA_MINI_2h44m.bgcode  case_hipro_mx_top_left_0.4n_0.2mm_PLA_MINI_2h44m.gcode  case_hipro_mx_top_right.3mf  case_hipro_mx_top_right_0.4n_0.2mm_PLA_MINI_2h44m.bgcode  hardware.scad  pcb_spacer.3mf  pcb_spacer.stl  pcb_spacer_left.3mf  pcb_spacer_right.3mf  quality_petg_0_2mm_config.ini  shockboard_v1.scad  standoff_m2_3_5mm.3mf  test_part.3mf  (+2 more)
docs/: fairyboard.md  shockboard.md
ergogen/: README.md  ergogen.yaml  shockboard-v0_1.yaml  shockboard-v0_2.yaml  shockboard-v0_2_0.yaml  shockboard-v0_2_1.yaml  shockboard-v0_3.yaml  shockboard-v0_3_1.yaml  shockboard-v0_4_0.yaml
images/: restiveengines.ora
keycaps/: README.md
mcad/: shockboard_test.slvs  shockboard_test.stl  shockboard_test_half.stl
(+275 files in other folders)
